--- a/twitter/src/index.css
+++ b/twitter/src/index.css
@@ -1,10 +1,17 @@
-body {
+@font-face {
+  font-family: 'Helvetica Neue', sans-serif;
+  font-weight: bold;
+  src: url("../src/fonts/Helvetica\ Neue\ Medium\ Extended.otf");
+  src: url("../src/fonts/Helvetica\ Neue\ Medium\ Extended.ttf");
+}
+
+body html {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  height: 100%;
+  background-color: rgb(255, 255, 255);
+  font-family: 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  -moz-osx-font-smoothing: grayscale;  
 }
 
 code {
